[gd_scene load_steps=14 format=3 uid="uid://bdbwos0s5sc1d"]

[ext_resource type="PackedScene" uid="uid://dkpis7w2h85hp" path="res://Characters/Enemies/Enemy.tscn" id="1_qa4sw"]
[ext_resource type="Texture2D" uid="uid://mto5b6cnjswl" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/enemies/tribals/tribal_01.png" id="2_qsc6j"]
[ext_resource type="Script" path="res://Characters/Enemies/BlowpipeTribal/BlowpipeTribal.gd" id="2_thi7f"]
[ext_resource type="Script" path="res://Characters/HurtBox.gd" id="3_k2c77"]
[ext_resource type="Script" path="res://Characters/Enemies/BlowpipeTribal/BlowpipeTribalFSM.gd" id="3_p78pm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_23s0p"]
radius = 4.12311

[sub_resource type="Animation" id="Animation_bitd3"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_efacm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1shun"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_ea1so"]
resource_name = "idle_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_gsai0"]
resource_name = "move_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wj5em"]
_data = {
"RESET": SubResource("Animation_efacm"),
"idle": SubResource("Animation_bitd3"),
"idle_up": SubResource("Animation_ea1so"),
"move": SubResource("Animation_1shun"),
"move_up": SubResource("Animation_gsai0")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w2kga"]
radius = 5.0
height = 12.0

[node name="BlowpipeTribal" instance=ExtResource("1_qa4sw")]
collision_mask = 21
script = ExtResource("2_thi7f")
projectile_speed = 150
is_boss = false

[node name="FiniteStateMachine" parent="." index="0"]
script = ExtResource("3_p78pm")

[node name="Sprite2D" parent="." index="1"]
position = Vector2(0, -5)
texture = ExtResource("2_qsc6j")
hframes = 6
vframes = 4

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource("CircleShape2D_23s0p")

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_wj5em")
}

[node name="HurtBox" type="Area2D" parent="." index="9"]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_k2c77")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_w2kga")

[node name="AimRayCast" type="RayCast2D" parent="." index="10"]

[node name="AttackTimer" type="Timer" parent="." index="11"]
wait_time = 1.5
one_shot = true
